--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,8 +6,8 @@
 
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav mr-auto">
-			<li class="nav-item"><a class="nav-link" href="#">Recipes</a></li>
-			<li class="nav-item"><a class="nav-link" href="#">Shopping List</a></li>
+			<li class="nav-item"><a class="nav-link" href="#" (click)='this.showRecipes()'>Recipes</a></li>
+			<li class="nav-item"><a class="nav-link" href="#" (click)='this.showShoppingList()'>Shopping List</a></li>
 		</ul>
 		<div class="nav-item dropdown navbar-right">
 			<a href="#" class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
