--- a/src/app/recipe-book/recipe-book.component.html
+++ b/src/app/recipe-book/recipe-book.component.html
@@ -1,9 +1,10 @@
-<h4>The Book of Recipes by Suor Petronilla</h4>
+<h3>The Book of Recipes by Suor Petronilla</h3>
 <div class="row">
 	<div class="col-6">
-		<app-recipe-list></app-recipe-list>
-	<div>
+		<button class="btn btn-success">New Recipe</button>
+		<app-recipe-list *ngFor="let r of recipe" [rcp]='r'></app-recipe-list>
+	</div>
 	<div class="col-6">
-		<app-recipe-detail></app-recipe-detail>
-	<div>
+		<div class="list-group-item-text"><app-recipe-detail></app-recipe-detail></div>
+	</div>
 </div>
