--- a/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -1,1 +1,32 @@
-<p> Here for the details...</p>
+<div class="row">
+	<div class="col-12">
+		<img src="" alt="" class="img-responsive">
+	</div>
+</div>
+<div class="row">
+	<div class="col-12">
+		<h3>Recipe Name</h3>
+	</div>
+</div>
+<div class="row">
+	<div class="col-12">
+		<div class="dropdown">
+			<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage Recipe<span class="caret"></span></button>
+			<div class="drowpdown-menu" aria-labelledby="dropdownMenuButton">
+				<a href="#" class="dropdown-item">To Shopping List</a>
+				<a href="#" class="dropdown-item">Edit Recipe</a>
+				<a href="#" class="dropdown-item">Delete Recipe</a>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="row">
+	<div class="col-12">
+		<p>Description</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-12">
+		<p>Ingredients</p>
+	</div>
+</div>
