--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,2 +1,9 @@
-<p>Here goes the other list!</p>
-<app-shopping-list-edit></app-shopping-list-edit>
+<div class="row">
+	<div class="col-10">
+		<h3>Shopping List</h3>
+		<app-shopping-list-edit></app-shopping-list-edit>
+		<ul class="list-group">
+			<a class="list-group-item" style="cursor: pointer;" *ngFor='let i of this.ingredient'>{{ i.name }} ({{ i.amount }})</a>
+		</ul>
+	</div>
+</div>
