--- a/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="row">
 	<div class="col-12">
-		<h3>Recipe Name</h3>
+		<h3>{{ this.rcp.name }}</h3>
 	</div>
 </div>
 <div class="row">
@@ -22,7 +22,7 @@
 </div>
 <div class="row">
 	<div class="col-12">
-		<p>Description</p>
+		<p>{{ this.rcp.description }}</p>
 	</div>
 </div>
 <div class="row">
